# coop

./: CMakeLists.txt  Coop.cpp  FragenAnStefan.txt  InputArgs.cpp  Logger.cpp  MatchCallbacks.cpp  README.md  SourceModification.cpp  SystemStateInformation.cpp  coop_utils.cpp  data.cpp  function_test.cpp  install.sh  naming.cpp  nextSteps.txt  test.cpp  testit.cpp
include/: InputArgs.h  Logger.hpp  MatchCallbacks.hpp  SourceModification.h  SystemStateInformation.hpp  astTest.cpp  coop_free_list.hpp  coop_utils.hpp  data.hpp  naming.hpp
src_mod_templates/: access_method_to_cold_data.cpp  cold_struct_template.cpp  constructor_deep_copy_emulation.cpp  coop_config.txt  copy_assignment_operator_deep_copy_emulation.cpp  copy_constructor_deep_copy_emulation.cpp  existing_copy_constructor_deep_copy_emulation.cpp  free_list_definition.cpp  free_list_definition_only_cold.cpp  free_list_template.cpp  free_list_template.hpp  free_list_template.tmpl  intrusive_record_addition.cpp  memory_allocation_template.cpp  pointer_to_cold_data.cpp  record_instantition_optimization_template.cpp
testinclude/: testit.hpp
testing/: testit.cpp  testit.cppBK
